# crawfish

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  requirements.txt
examples/: N2.ipynb  debug.py  debug2.ipynb  debug3.ipynb  debug4.ipynb  debug5.ipynb  s_uv_hack.ipynb
src/crawfish/core/: __init__.py  elecdata.py  matrix_operations.py
src/crawfish/core/operations/: matrix.py  scalar.py  vector.py
src/crawfish/funcs/: __init__.py  dos.py  general.py  pcohp.py  pcoop.py  pdos.py
src/crawfish/io/: __init__.py  ase_helpers.py  data_parsing.py  general.py  utils.py
src/crawfish/utils/: __init__.py  arg_correction.py  caching.py  indexing.py  typing.py
src/crawfish/utils/testing/: __init__.py
tests/: conftest.py
tests/core/: test_all.py  test_elecdata.py  test_matrix_operations.py  test_scalar_operations.py  test_vector_operations.py
tests/core/operations/: test_matrix_operations.py  test_vector_operations.py
tests/files/io/example_files/: bandProjections_corrupted
tests/files/io/example_files/equiv_structure_files/: CONTCAR  POSCAR.gjf
tests/funcs/: test_general_funcs.py  test_pcohp.py  test_pcoop.py  test_pdos.py
tests/io/: test_ase_helpers.py  test_data_parsing.py  test_utils.py
tests/utils/: test_caching.py  test_indexing.py  test_testing.py  test_typing.py
