[project]
name = "crawfish"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [{ name = "Ben Rich", email = "benjamin.rich@colorado.edu" }]


dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.25.0,<3",
    "numba>=0.55"
]

[tool.ruff]
target-version = "py310"
line-length = 120
output-format = "concise"

[tool.pdm.dev-dependencies]
lint = ["mypy>=1.10.0", "pre-commit>=3.7.1", "ruff>=0.4.9"]
test = ["pytest-cov>=5.0.0", "pytest-split>=0.9.0", "pytest>=8.2.2"]

[tool.pyright]
typeCheckingMode = "off"
reportPossiblyUnboundVariable = true
reportUnboundVariable = true
reportMissingImports = false
reportMissingModuleSource = false
reportInvalidTypeForm = false
exclude = ["**/tests"]

[tool.ruff.format]
docstring-code-format = true